Added a custom java receiver that pulls the data from the TwitterResource class, should be working with a serializable twitterResource

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,13 @@
 
         <dependency>
             <groupId>com.twitter</groupId>
-            <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
+            <artifactId>hbc-twitter4j</artifactId> <!-- or  hbc-core-->
+            <version>2.2.0</version> <!-- or whatever the latest version is -->
+        </dependency>
+
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>hbc-core</artifactId> <!-- or  hbc-core-->
             <version>2.2.0</version> <!-- or whatever the latest version is -->
         </dependency>
 
